--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,6 +1,6 @@
    <router-outlet class="main-site">
    	<!-- zaloguj -->
-   	<p [hidden]="logged!=1" style="text-align: right;"><a href="/logout">Wyloguj</a></p>
+   	<p [hidden]="logged!=1" style="text-align: right;"><a href="/#/logout">Wyloguj</a></p>
 
 
    </router-outlet>
