--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -7,6 +7,9 @@ Logowanie
 	
 
 <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
+  <div style="width: 100%; display: inline-block; text-align: center; color: red;">
+    {{error}}
+  </div>
 	<div style="width: 100%; display: inline-block; text-align: center;">
 		<div style="width: 33%; display: inline-block; text-align: right;">Login</div>
   <div style="width: 33%; display: inline-block; text-align: center;">
