--- a/app/logout/logout.component.html
+++ b/app/logout/logout.component.html
@@ -1,7 +1,7 @@
-<div style="width: 100%;">
-	<div style="width: 33%"></div>
-	<div style="width: 33%">Zostałem wylogowany. <a href="/login">Zaloguj się ponownie</a></div>
-	<div style="width: 33%"></div>
+<div style="width: 100%; display: inline-block; text-align: center;">
+	<div style="width: 33%; display: inline-block;"></div>
+	<div style="width: 33%; display: inline-block;"><h2>Zostałem wylogowany.</h2><h2> <a href="/#/login">Zaloguj się ponownie</a></h2></div>
+	<div style="width: 33%; display: inline-block;"></div>
 
 
 </div>
